fix: horizontal scroll bar on topics in drawer (#337)
* fix: horizontal scroll bar on topics in drawer

* fix: paddings, margins, borders, course info horizontal scroll

--- a/course/assets/css/course-info.scss
+++ b/course/assets/css/course-info.scss
@@ -3,6 +3,13 @@
   $collapsedHeight: 200px;
   $opaqueLayerHeight: 30px;
 
+  // This media query is not defined gloabally as it
+  // is targeted/specific to a particular use case only
+  // Hiding horizontal scroll on screens where content already fits in
+  @media (min-width: 1270px) {
+    overflow-x: hidden !important;
+  }
+
   &.collapsed {
     table {
       display: block;
